    - added button to delete world in world selection screen
    - registries get now "locked" after mod loading finished (they are still write-able, but this will get removed in
        the future as it will get replaced by reload-registries-events)
    - added /execute in <dimension id> sub-command
    - /teleport allows now the player to also change dimension

    fixed issues:
        from previous snapshot:
            - ordering of world selection list was wrong
            - world selection screen was not rendering all possible worlds
            - ShiftContainer was miss-behaving in certain cases
            - registry info was not dumping data correctly
            - exceptions when no save file exists
            - data fixer results may not be saved correctly
            - exception when world selection screen is empty
            - world selection screen was parsing name incorrectly

        long-term issues:
            - rendering helper was miss-doing some stuff
            - debug world was displaying some block states more than one time
            - exceptions were printed into log when loading an saved debug world
            - .setGlobalModName() on ItemFactory did not work correctly
            - ItemAtlas was crashing on missing texture file instead of replacing with missingtexture.png
            - ItemFactory's template system was broken

changelog of snapshot 20w25a released on 18.06.2020 (theme: data fixers and API improvements)
    Rendering:
        - added state part serializer for progress bar
        - generation screens
        - implemented world list with selection. Moved world name enter into world generation settings screen
        - added UI element for scroll bars

    Saves:
        - rewritten data fixer system. Incompatible with old one. Old stuff still arrival, but deprecated
        - old worlds are still load-able as data-fixers were ported

    Console:
        - improved loading
        - changed some logging systems
