@@ -70,8 +70,9 @@ class StateWorldLoading(State.State):
         for cx in range(-3, 4):
             for cz in range(-3, 4):
                 self.status_table[(cx, cz)] = 0
-                G.world.savefile.read("minecraft:chunk", dimension=G.world.active_dimension, chunk=(cx, cz),
-                                      immediate=False)
+                # todo: fix bug: something is wrong here...
+                # G.world.savefile.read("minecraft:chunk", dimension=G.world.active_dimension, chunk=(cx, cz),
+                #                       immediate=False)
         G.worldgenerationhandler.enable_generation = True
 
     def on_deactivate(self):
